TEST_PROGRAMS/INVALID/Olivier_Melancon/while_do.min
while 1
	1 + 1
done

